[gd_scene load_steps=10 format=3 uid="uid://c2eu8oiisidbt"]

[ext_resource type="Script" path="res://level selection.gd" id="1_ncbli"]
[ext_resource type="PackedScene" uid="uid://c10enx0bd523e" path="res://node_2d.tscn" id="1_rtjes"]
[ext_resource type="Texture2D" uid="uid://b7duchwoy74yk" path="res://img/Captura de tela 2024-01-03 222340.png" id="2_lb23t"]
[ext_resource type="Texture2D" uid="uid://cmwilghd6kbdh" path="res://img/Captura de tela 2024-01-03 225339.png" id="3_2aesn"]
[ext_resource type="Texture2D" uid="uid://c6mlgwi1iq1bp" path="res://img/Captura de tela 2024-01-03 225911.png" id="4_8exl3"]
[ext_resource type="FontFile" uid="uid://kgaveklay1s2" path="res://img/Sofija.ttf" id="4_x4xyx"]
[ext_resource type="Texture2D" uid="uid://3gv2x3qfeddv" path="res://img/Captura de tela 2024-01-03 230808.png" id="5_7l2ob"]
[ext_resource type="Texture2D" uid="uid://c6niqnr4q1k7u" path="res://img/Captura de tela 2024-01-03 232224.png" id="6_ksjlf"]
[ext_resource type="StyleBox" uid="uid://cwk08ju363rrl" path="res://bottom_style.tres" id="9_8tk41"]

[node name="levels" type="Node2D"]
script = ExtResource("1_ncbli")

[node name="game" parent="." instance=ExtResource("1_rtjes")]
position = Vector2(-5, 0)

[node name="Node" type="Node" parent="."]

[node name="ColorRect" type="ColorRect" parent="Node"]
offset_left = -104.0
offset_top = -48.0
offset_right = 1216.0
offset_bottom = 696.0
color = Color(0.0666667, 0.0666667, 0.0666667, 0.521569)

[node name="Button" type="Button" parent="Node/ColorRect"]
layout_mode = 2
offset_left = 328.0
offset_top = 136.0
offset_right = 968.0
offset_bottom = 777.0
scale = Vector2(0.2, 0.2)
focus_neighbor_left = NodePath("../Button5")
focus_neighbor_bottom = NodePath("../../Button")
icon = ExtResource("2_lb23t")

[node name="Label" type="Label" parent="Node/ColorRect/Button"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.25
anchor_right = -0.25
offset_left = 160.0
offset_top = 690.0
offset_right = 800.0
offset_bottom = 890.0
theme_override_fonts/font = ExtResource("4_x4xyx")
theme_override_font_sizes/font_size = 130
text = "Constante"
horizontal_alignment = 1

[node name="Button2" type="Button" parent="Node/ColorRect"]
layout_mode = 2
offset_left = 472.0
offset_top = 136.0
offset_right = 1114.0
offset_bottom = 777.0
scale = Vector2(0.2, 0.2)
focus_neighbor_bottom = NodePath("../../Button")
icon = ExtResource("3_2aesn")

[node name="Label" type="Label" parent="Node/ColorRect/Button2"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.25
anchor_right = -0.25
offset_left = 160.0
offset_top = 690.0
offset_right = 800.0
offset_bottom = 890.0
theme_override_fonts/font = ExtResource("4_x4xyx")
theme_override_font_sizes/font_size = 130
text = "Linear"
horizontal_alignment = 1

[node name="Button3" type="Button" parent="Node/ColorRect"]
layout_mode = 2
offset_left = 616.0
offset_top = 136.0
offset_right = 1257.0
offset_bottom = 780.0
scale = Vector2(0.2, 0.2)
focus_neighbor_bottom = NodePath("../../Button")
icon = ExtResource("4_8exl3")

[node name="Label" type="Label" parent="Node/ColorRect/Button3"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.25
anchor_right = -0.25
offset_left = 160.0
offset_top = 690.0
offset_right = 800.0
offset_bottom = 890.0
theme_override_fonts/font = ExtResource("4_x4xyx")
theme_override_font_sizes/font_size = 130
text = "Log"
horizontal_alignment = 1

[node name="Button4" type="Button" parent="Node/ColorRect"]
layout_mode = 2
offset_left = 760.0
offset_top = 136.0
offset_right = 1402.0
offset_bottom = 778.0
scale = Vector2(0.2, 0.2)
focus_neighbor_bottom = NodePath("../../Button")
icon = ExtResource("5_7l2ob")

[node name="Label" type="Label" parent="Node/ColorRect/Button4"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.25
anchor_right = -0.25
offset_left = 160.0
offset_top = 690.0
offset_right = 800.0
offset_bottom = 890.0
theme_override_fonts/font = ExtResource("4_x4xyx")
theme_override_font_sizes/font_size = 130
text = "Exp"
horizontal_alignment = 1

[node name="Button5" type="Button" parent="Node/ColorRect"]
layout_mode = 2
offset_left = 904.0
offset_top = 136.0
offset_right = 1548.0
offset_bottom = 778.0
scale = Vector2(0.2, 0.2)
focus_neighbor_right = NodePath("../Button")
focus_neighbor_bottom = NodePath("../../Button")
icon = ExtResource("6_ksjlf")

[node name="Label" type="Label" parent="Node/ColorRect/Button5"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.25
anchor_right = -0.25
offset_left = 160.0
offset_top = 690.0
offset_right = 800.0
offset_bottom = 890.0
theme_override_fonts/font = ExtResource("4_x4xyx")
theme_override_font_sizes/font_size = 130
text = "Seinoidal"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Node"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = -33.0
offset_right = 59.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_top = NodePath("../ColorRect/Button")
focus_neighbor_bottom = NodePath("../ColorRect/Button5")
theme_override_colors/font_color = Color(0.768627, 0.768627, 0.768627, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.509804, 0.509804, 0.509804, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 0)
theme_override_fonts/font = ExtResource("4_x4xyx")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("9_8tk41")
text = "Menu"

[connection signal="pressed" from="Node/ColorRect/Button" to="." method="_on_button1_pressed"]
[connection signal="pressed" from="Node/ColorRect/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Node/ColorRect/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Node/ColorRect/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Node/ColorRect/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="Node/Button" to="." method="_on_button_pressed"]
